# ice_analysis

./: README.md
XI/: .gitignore  README.md  cycle_dipole.py  cyclez.py  grid_dipole.py  pyproject.toml
XI/common/: energy.py  graph2.py  gromacs2.py  undump.py
