[project]
name = "xi"
version = "0.1.0"
description = ""
authors = [
    {name = "vitroid",email = "vitroid@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "cycless (>=0.6.4)",
    "networkx (>=3.6,<4.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "pairlist (>=0.6,<0.7)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "click (>=8.3.1,<9.0.0)",
    "yaplotlib (>=0.1.3,<0.2.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
